<resources>
    <string name="app_name">The Meal Zone</string>

    <string name="refresh">Refresh</string>

    <string name="bottom_nav_recipe">Recipes</string>
    <string name="bottom_nav_meals">Meals</string>
    <string name="bottom_nav_cart">Shopping Cart</string>

    <string name="welcome_message_title">Welcome!</string>
    <string name="welcome_message_body">What\'s on your plate today?</string>

    <string name="recipe_message_title">Recipes</string>
    <string name="recipe_message_body">Lets find what you\'re looking for!</string>
    <string name="recipe_list_title">Here is a list of all your recipes:</string>
    <string name="recipe_search_bar">Enter the recipe name that you would like to search…</string>
    <string name="recipe_refresh_button">Refresh your cook book.</string>
    <string name="recipe_search_hint">e.g. \'cookies\'</string>
    <string name="recipe_add_button">Add Recipe</string>

    <string name="cart_message_title">Fill the cart!</string>
    <string name="cart_message_body">What do you need to get?</string>
    <string name="cart_entry_add_button">Add to cart</string>
    <string name="cart_add_button">Add items</string>
    <string name="cart_back_button">Back to cart</string>
    <string name="cart_clear_items">Empty</string>
    <string name="cart_item_name">Item</string>
    <string name="cart_item_amount">Amount</string>
    <string name="cart_item_name_hint">Butter…</string>
    <string name="cart_item_amount_hint">2 cups…</string>
    <string name="cart_list_title">Here\'s your cart, check off the items once you get them!</string>

    <string name="meals_title">Meals</string>
    <string name="breakfast_daily_meal">Breakfast:</string>
    <string name="lunch_daily_meal">Lunch:</string>
    <string name="dinner_daily_meal">Dinner:</string>

    <string name="recipe_entry_title">Whats cookin\'?</string>
    <string name="recipe_entry_header">Enter the details of your recipe below…</string>
    <string name="recipe_entry_name">Recipe Name:</string>
    <string name="recipe_entry_name_hint">Mac and Cheese</string>
    <string name="recipe_entry_desc">Description:</string>
    <string name="recipe_entry_desc_hint">add the cheese, milk, and stir…</string>
    <string name="recipe_entry_ingredients">Ingredients:</string>
    <string name="recipe_entry_ingredients_hint">butter, milk, noodles</string>
    <string name="recipe_save_button">Save Recipe</string>
    <string name="recipe_clear_button">Back To Recipes</string>
</resources>